feat: add document
Post to db.
Form in index.
Print new list.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,11 @@
 <body>
     <h1>Docs Galore</h1>
 
+    <div>
+        <input type="text" id="newDocument">
+        <button id="saveNewDocumentBtn">save</button>
+    </div>
+
     <ul id="documentList"></ul>
     
 </body>
