feat: login function
Simple login button. Click and page content becomes visible.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,12 +10,16 @@
 <body>
     <h1>Docs Galore</h1>
 
-    <div>
-        <input type="text" id="newDocument">
-        <button id="saveNewDocumentBtn">save</button>
+    <button id="loginBtn">login</button>
+
+    <div id="pageContent" hidden>
+        <div>
+            <input type="text" id="newDocument">
+            <button id="saveNewDocumentBtn">save</button>
+        </div>
+
+        <ul id="documentList"></ul>
     </div>
 
-    <ul id="documentList"></ul>
-    
 </body>
 </html>
