trouble printing and saving
newDocumentNotes are neither printed nor correctly saved in database. It has a null value.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,13 @@
     <button id="loginBtn">login</button>
 
     <div id="pageContent" hidden>
-        <div>
-            <input type="text" id="newDocument">
+        <div class="add-new-content">
+            <label for="newDocumentTitle">Document Title</label>
+            <textarea id="newDocumentTitle" name="newDocumentTitle" rows="1" cols="50"></textarea>
+            
+            <label for="newDocumentNotes">Notes</label>
+            <textarea id="newDocumentNotes" name="newDocumentNotes" rows="15" cols="50"></textarea>
+
             <button id="saveNewDocumentBtn">save</button>
         </div>
 
